update(common):修改字段类型，添加测试类

--- a/codegen/src/main/resources/config.yaml
+++ b/codegen/src/main/resources/config.yaml
@@ -1,6 +1,6 @@
 db:
-  url: jdbc:postgresql://localhost:5432/afezeria
-  user: afezeria
+  url: jdbc:postgresql://localhost:5432/test
+  user: test
   password: 123456
   driver: org.postgresql.Driver
 schema: hymn
