--- a/common/src/test/resources/database.properties
+++ b/common/src/test/resources/database.properties
@@ -1,7 +1,6 @@
-url=jdbc:postgresql://localhost:5432/afezeria
-host=localhost
-port=5432
-database=afezeria
-username=test
-password=123456
-driver=org.postgresql.Driver
+dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+dataSource.user=test
+dataSource.password=123456
+dataSource.databaseName=test
+dataSource.portNumber=5432
+dataSource.serverName=localhost
