--- a/common/build.gradle
+++ b/common/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     compile group: "org.ktorm", name: "ktorm-core", version: "$ktormVersion"
 
     testCompile "org.postgresql:postgresql:42.2.10"
+    testCompile group: "com.zaxxer", name: "HikariCP", version: "3.4.5"
+//    testImplementation 'io.kotest:kotest-assertions-core:4.3.1'
+//    testImplementation 'io.kotest:kotest-runner-junit5:4.3.1' // for kotest framework
+    testImplementation 'io.kotest:kotest-assertions-core-jvm:4.3.1' // for kotest core jvm assertions
+//    testImplementation 'io.kotest:kotest-property:4.3.1' // for kotest property test
     testImplementation(platform("org.junit:junit-bom:5.7.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
