--- a/codegen/build.gradle
+++ b/codegen/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.3"
 
     compile group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.9.7'
+    compile group: 'org.apache.poi', name: 'poi', version: '4.1.2'
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
+
 
     compile group: "com.zaxxer", name: "HikariCP", version: "3.4.5"
 
