--- a/codegen/src/main/resources/config.yaml
+++ b/codegen/src/main/resources/config.yaml
@@ -6,7 +6,7 @@ db:
 schema: hymn
 packageName: github.afezeria.hymn.admin
 moduleName: admin
-tableRegex: ^sys_core
+tableRegex: ^sys_core.*(?<!history)$
 templates: [
 #    Controller,
 #    Dto,
