update(common):取消基础表的sys前缀，修改触发器逻辑将新增对象后插入相关数据的语句从触发器中移除

--- a/codegen/src/main/resources/config.yaml
+++ b/codegen/src/main/resources/config.yaml
@@ -6,13 +6,13 @@ db:
 schema: hymn
 packageName: github.afezeria.hymn.admin
 moduleName: admin
-tableRegex: ^sys_core.*(?<!history)$
+tableRegex: ^core(?!_data_table).*(?<!history)$
 templates: [
-#    Controller,
-#    Dto,
+    Controller,
+    Dto,
     Entity,
-#    Service,
-#    ServiceImpl,
+    Dao,
+    DaoImpl,
     Table
 ]
 systemOutput: false
