更新配置文件

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'hymn-platform'
 include 'common'
 include 'core'
+
+//project(":common").projectDir = "common" as File
+//project(":core").projectDir = "core" as File
