--- a/build.gradle
+++ b/build.gradle
@@ -7,28 +7,55 @@ buildscript {
         maven { url "http://mvnrepository.com/" }
         maven { url "https://repo.spring.io/release" }
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         maven { url "https://plugins.gradle.org/m3/" }
         maven { url "https://scans.gradle.com/plugin/" }
 
+
+
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath "io.spring.gradle:dependency-management-plugin:${springDependencyManagementVersion}"
     }
 
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.3.1.RELEASE"
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.9.RELEASE"
-        classpath "org.jetbrains.kotlin:kotlin-allopen:1.4.10"
-    }
 }
 
-plugins {
-    id 'idea'
+apply plugin: 'java'
+apply plugin: 'org.jetbrains.kotlin.jvm'
+apply plugin: 'org.jetbrains.kotlin.plugin.spring'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'idea'
+
+group = 'github.afezeria.hymn'
+version = '0.0.1'
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+    jcenter()
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
 
 subprojects {
+    apply plugin: 'java'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'org.jetbrains.kotlin.plugin.spring'
+    apply plugin: 'org.jetbrains.kotlin.plugin.allopen'
+    apply plugin: 'io.spring.dependency-management'
     apply plugin: 'idea'
 
-    group = 'github.afezeria.hymn'
-    version = '0.0.1'
 
     configurations {
         compile.exclude module: 'spring-boot-starter-logging'
@@ -46,5 +73,11 @@ subprojects {
     }
 
     dependencies {
+        implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    }
+
+    dependencyManagement {
+        imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
     }
 }
