--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,13 +1,13 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm'
-    id "io.spring.dependency-management"
-    id "org.springframework.boot"
-    id "org.jetbrains.kotlin.plugin.spring"
-}
-
-def ktormVersion = project.ktormVersion
-
-
+//plugins {
+//    id 'org.jetbrains.kotlin.jvm'
+//    id "io.spring.dependency-management"
+//    id "org.springframework.boot"
+//    id "org.jetbrains.kotlin.plugin.spring"
+//}
+//
+//def ktormVersion = project.ktormVersion
+//
+//
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
@@ -20,23 +20,24 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.3"
 
     implementation 'io.github.microutils:kotlin-logging:1.12.0'
+
+
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+
 
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
 
-    compile group: "org.ktorm", name: "ktorm-core", version: "$ktormVersion"
+    implementation(group: "org.ktorm", name: "ktorm-core", version: "$ktormVersion") {
+        exclude group: 'org.jetbrains.kotlin'
+    }
 
     testCompile "org.postgresql:postgresql:42.2.10"
     testCompile group: "com.zaxxer", name: "HikariCP", version: "3.4.5"
-//    testImplementation 'io.kotest:kotest-runner-junit5:4.3.1'
-//    testImplementation 'io.kotest:kotest-assertions-core:4.3.1'
-//    testImplementation 'io.kotest:kotest-property:4.3.1'
     testImplementation 'io.kotest:kotest-assertions-core-jvm:4.3.1' //单独使用kotest的断言库时引入的依赖
     testImplementation(platform("org.junit:junit-bom:5.7.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
@@ -48,10 +49,10 @@ test {
         events "passed", "skipped", "failed"
     }
 }
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
+//
+//compileKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
+//compileTestKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
