--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,15 +1,5 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm'
-    id "io.spring.dependency-management"
-    id "org.springframework.boot"
-    id "org.jetbrains.kotlin.plugin.spring"
-}
-
-def ktormVersion = project.ktormVersion
-
-
 dependencies {
-    implementation(project(':common'))
+    compile project(':common')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     implementation 'io.github.microutils:kotlin-logging:1.12.0'
@@ -28,7 +18,7 @@ dependencies {
     testCompile "org.postgresql:postgresql:42.2.10"
     testCompile group: "com.zaxxer", name: "HikariCP", version: "3.4.5"
 
-    testImplementation 'io.kotest:kotest-assertions-core-jvm:4.3.1' //单独使用kotest的断言库时引入的依赖
+    testImplementation 'io.kotest:kotest-assertions-core-jvm:4.3.1'
     testImplementation(platform("org.junit:junit-bom:5.7.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
@@ -38,11 +28,4 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
 }
