--- a/core/build.gradle
+++ b/core/build.gradle
@@ -29,3 +29,9 @@ test {
         events "passed", "skipped", "failed"
     }
 }
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
