--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,11 @@ repositories {
     jcenter()
 }
 
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+}
+
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
