--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'hymn-platform'
-include 'common'
 include 'core'
+include 'common'
+include 'script'
 
 //project(":common").projectDir = "common" as File
 //project(":core").projectDir = "core" as File
