--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ repositories {
 }
 
 dependencies {
+    implementation(project(':api'))
+    implementation(project(':core'))
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
 }
