(common) 更新单元测试

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,13 +1,3 @@
-//plugins {
-//    id 'org.jetbrains.kotlin.jvm'
-//    id "io.spring.dependency-management"
-//    id "org.springframework.boot"
-//    id "org.jetbrains.kotlin.plugin.spring"
-//}
-//
-//def ktormVersion = project.ktormVersion
-//
-//
 task testJar(type: Jar) {
     classifier = 'test'
     from sourceSets.test.output
@@ -55,6 +45,9 @@ dependencies {
     testCompile "org.postgresql:postgresql:42.2.10"
     testCompile group: "com.zaxxer", name: "HikariCP", version: "3.4.5"
     testCompile 'io.kotest:kotest-assertions-core-jvm:4.3.1' //单独使用kotest的断言库时引入的依赖
+//    testCompile 'io.kotest:kotest-property-jvm:4.3.1' //单独使用kotest的断言库时引入的依赖
+//    testCompile 'io.kotest:kotest-runner-junit5:4.3.1'
+
     testCompile(platform("org.junit:junit-bom:5.7.0"))
     testCompile("org.junit.jupiter:junit-jupiter")
 
