--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
-rootProject.name = 'hymn-platform'
-include 'core'
-include 'common'
-include 'api'
-include 'script'
+rootProject.name = "hymn-platform"
+include("core")
+include("common")
+include("api")
+include("script")
+include("oss")
+include("app")
