--- a/common/src/test/resources/application.properties
+++ b/common/src/test/resources/application.properties
@@ -8,7 +8,7 @@ spring.db[0].dataSource.databaseName=test
 spring.db[0].dataSource.portNumber=5432
 spring.db[0].dataSource.serverName=localhost
 spring.db[1].dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-spring.db[1].dataSource.user=test
+spring.db[1].dataSource.user=test_user
 spring.db[1].dataSource.password=123456
 spring.db[1].dataSource.databaseName=test
 spring.db[1].dataSource.portNumber=5432
