(common) 集成p6spy

--- a/common/src/test/resources/application.properties
+++ b/common/src/test/resources/application.properties
@@ -1,14 +1,8 @@
 server.servlet.context-path=/module
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.db.admin[0].dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+spring.db.admin[0].jdbcUrl=jdbc:postgresql://localhost:5432/test
 spring.db.admin[0].dataSource.user=test
 spring.db.admin[0].dataSource.password=123456
-spring.db.admin[0].dataSource.databaseName=test
-spring.db.admin[0].dataSource.portNumber=5432
-spring.db.admin[0].dataSource.serverName=localhost
-spring.db.user.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+spring.db.user.jdbcUrl=jdbc:postgresql://localhost:5432/test
 spring.db.user.dataSource.user=test_user
 spring.db.user.dataSource.password=123456
-spring.db.user.dataSource.databaseName=test
-spring.db.user.dataSource.portNumber=5432
-spring.db.user.dataSource.serverName=localhost
