--- a/common/src/test/resources/admin-database.properties
+++ b/common/src/test/resources/admin-database.properties
@@ -1,6 +1,3 @@
-dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+jdbcUrl=jdbc:postgresql://localhost:5432/test
 dataSource.user=test
 dataSource.password=123456
-dataSource.databaseName=test
-dataSource.portNumber=5432
-dataSource.serverName=localhost
