(common) AbstractDao添加批量插入与批量更新方法

--- a/common/src/test/resources/admin-database.properties
+++ b/common/src/test/resources/admin-database.properties
@@ -1,3 +1,6 @@
 jdbcUrl=jdbc:postgresql://localhost:5432/test
 dataSource.user=test
 dataSource.password=123456
+dataSource.databaseName=test
+dataSource.portNumber=5432
+dataSource.serverName=localhost
