--- a/common/src/test/resources/user-database.properties
+++ b/common/src/test/resources/user-database.properties
@@ -1,3 +1,7 @@
 jdbcUrl=jdbc:postgresql://localhost:5432/test
 dataSource.user=test_user
 dataSource.password=123456
+dataSource.databaseName=test
+dataSource.portNumber=5432
+dataSource.serverName=localhost
+
