--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = "hymn-platform"
 include("core")
 include("common")
-include("api")
+include("biz")
 include("script")
 include("oss")
 include("app")
