(*) 移除api版本标识

--- a/common/src/test/resources/application.properties
+++ b/common/src/test/resources/application.properties
@@ -6,3 +6,5 @@ spring.db.admin[0].dataSource.password=123456
 spring.db.user.jdbcUrl=jdbc:postgresql://localhost:5432/test
 spring.db.user.dataSource.user=test_user
 spring.db.user.dataSource.password=123456
+
+hymn.lanIp=127.0.0.1
